Fixed Prompts & Flow

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 book_index.faiss
 1706.03762v7.pdf
-The Lean Startup .pdf
+TheLeanStartup.pdf
 .env
+.venv
+actionable_steps.json
+categorized_steps.json
+ordered_hierarchy.json
