--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fitz
 pymupdf
 nltk
-spacy
+# spacy
 sentence-transformers
 faiss-cpu
 sumy
@@ -10,3 +10,5 @@ bertopic
 llama-cpp-python
 scikit-learn
 hdbscan
+langchain
+langchain_community
