--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
