--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-fitz
+faiss-cpu
 pymupdf
 langchain
 langchain_community
@@ -8,3 +8,4 @@ fastapi
 uvicorn 
 psycopg2-binary
 python-multipart
+sentence-transformers
