--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.1",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
+    "colorthief": "^2.6.0",
     "framer-motion": "^12.6.2",
     "js-cookie": "^3.0.5",
     "next": "15.2.3",
