--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.6.2",
     "js-cookie": "^3.0.5",
     "next": "15.2.3",
+    "next-pwa": "^5.6.0",
     "next-share": "^0.27.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
