--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,7 @@ python-multipart
 sentence-transformers
 python-jose[cryptography]
 passlib[bcrypt]
+unstructured 
+pi_heif
+unstructured_inference
+pdf2image
